--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -4,11 +4,11 @@
 
 html,
 body {
-  @apply text-black dark:text-white;
+  @apply text-gray-800;
 }
 
 #app {
-  @apply bg-white dark:bg-gray-800 transitable;
+  @apply bg-white;
 }
 
 .h1 {
@@ -17,8 +17,4 @@ body {
 
 .h2 {
   @apply font-medium text-lg lg:text-2xl;
-}
-
-.link {
-  @apply transitable text-gray-500 hover:text-gray-800 dark:text-gray-300 dark:hover:text-gray-500;
 }
