Modal & disabled style

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -19,6 +19,10 @@ body {
   @apply font-medium text-lg lg:text-2xl;
 }
 
+[disabled] {
+  @apply !bg-gray-300 pointer-events-none;
+}
+
 .btn {
   @apply px-2 py-3 rounded-full transitable;
 }
