exchange modal & fix the logic of choose the product

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -42,3 +42,11 @@ body {
     @apply bg-primary-dark;
   }
 }
+
+.btn-outline-primary {
+  @apply border border-primary text-primary;
+
+  &:hover {
+    @apply bg-primary text-white;
+  }
+}
