create components about Form

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -50,3 +50,11 @@ body {
     @apply bg-primary text-white;
   }
 }
+
+.form-input {
+  @apply border p-3 rounded-lg w-full bg-white outline-none;
+
+  &:focus {
+    @apply border-primary;
+  }
+}
